Fixed line jumping issue, updated CSS

--- a/pui-final-project/css/style.css
+++ b/pui-final-project/css/style.css
@@ -3,15 +3,20 @@
 }
 
 body {
-    background: #394968;
+    background: #013464;
     font-family: Karla, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
     color: white;
 }
 
+/* header {
+    padding: 50px;
+} */
+
 #typewriter-animated {
     font-family: Karla, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
-    font-size: 24px;
+    font-size: 30px;
     color: white;
+    height: 36px;
 }
 
 .coffee-container {
@@ -26,7 +31,6 @@ h1 {
     font-weight: 400;
     font-size: 40px;
     text-align: center;
-    margin-top: 50px;
 }
 
 .homepage-header {
@@ -39,12 +43,29 @@ h1 {
     font-size: 20px;
 }
 
-.latte-components {
+/* .latte-components {
     width: 392px;
     height: 387px;
     flex-shrink: 0;
     display: block;
     margin-top: 200px;
+} */
+
+/*  CSS FOR COFFEE STEPS    */
+
+.coffee-steps {
+    width: 500px;
+    margin-top: 100px;
+}
+
+.steps-text {
+    margin-top: 50px;
+}
+
+.coffee-steps-image {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 .bottle {
@@ -60,10 +81,14 @@ h1 {
 }
 
 .next {
+    margin-top: 50px;
     font-family: Karla;
     font-size: 16px;
     border: 2px solid black;
-    background-color: #394968;
+    background-color: #013464;
     color: white;
+    font-size: 30px;
     padding: 10px;
+    border-radius: 20px;
+    display: block;
 }
